--- a/public/assets/translation/translation.json
+++ b/public/assets/translation/translation.json
@@ -30,6 +30,18 @@
       "Ensured project continuity by facilitating knowledge transfer and participating in weekly meetings.",
       "Completed the majority of practical implementation for the project."
     ],
+    "project3-title": "YOLOv8-based Object Detection System Development",
+    "project3-desc": [
+      "Collected and annotated a custom dataset by labelImg, and configured the YOLOv8 environment.",
+      "Trained and tested the YOLOv8 model, applying data augmentation to improve robustness.",
+      "Optimized performance through hyperparameter tuning and classifier fusion to enhance accuracy."
+    ],
+    "project4-title": "Unity Game Development",
+    "project4-desc": [
+      "Mastered Unity engine fundamentals and C# syntax for game development.",
+      "Developed 2D & 3D games, covering scene construction, physics simulation, and UI design.",
+      "Applied skills to Create demo games to showcase abilities, available at: <a href=\"https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump\">Demo1</a> and <a href=\"https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway\">Demo2</a>."
+    ],
     "skills-h2": "Skills",
     "skills-list": [
       "🌍 Chinese (Native️), 🌍 Japanese, 🌍 English",
@@ -86,6 +98,18 @@
       "为美国老师主导的多组学项目中负责开发和优化代码（PyTorch, Pandas, R）。",
       "通过知识转移和参加每周会议，确保了项目的连续性。",
       "完成了项目大部分的代码实现工作。"
+    ],
+    "project3-title": "基于YOLOv8的目标检测系统开发",
+    "project3-desc": [
+      "使用labelImg收集并标注了自定义数据集，并配置了YOLOv8环境。",
+      "训练和测试了YOLOv8模型，并应用数据增强以提高鲁棒性。",
+      "通过超参数调整和分类器融合优化性能，以提高准确性。"
+    ],
+    "project4-title": "Unity游戏开发",
+    "project4-desc": [
+      "掌握了Unity引擎基础和C#游戏开发语法。",
+      "开发了2D和3D游戏，涵盖了场景构建、物理模拟和UI设计。",
+      "应用技能创建了演示游戏以展示能力，可在以下地址查看：<a href=\"https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump\">Demo1</a> 和 <a href=\"https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway\">Demo2</a>."
     ],
     "skills-h2": "技能",
     "skills-list": [
@@ -144,13 +168,25 @@
       "知識移転と週次会議への参加を通じてプロジェクトの継続性を確保。",
       "プロジェクトの実質的な実装の大部分を完了。"
     ],
+    "project3-title": "YOLOv8に基づく物体検出システムの開発",
+    "project3-desc": [
+      "labelImgを使用してカスタムデータセットを収集・注釈付けし、YOLOv8環境を構成しました。",
+      "YOLOv8モデルをトレーニングおよびテストし、堅牢性を向上させるためにデータ拡張を適用しました。",
+      "ハイパーパラメータの調整と分類器の融合によりパフォーマンスを最適化し、精度を向上させました。"
+    ],
+    "project4-title": "Unityゲーム開発",
+    "project4-desc": [
+      "Unityエンジンの基礎とゲーム開発用のC#構文を習得しました。",
+      "シーン構築、物理シミュレーション、UIデザインをカバーする2Dおよび3Dゲームを開発しました。",
+      "スキルを応用して、能力を示すためのデモゲームを作成しました。デモは<a href=\"https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump\">Demo1</a> および <a href=\"https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway\">Demo2</a>でご覧いただけます。"
+    ],
     "skills-h2": "スキル",
     "skills-list": [
       "🌍 中国語 (ネイティブ)、🌍 日本語、🌍 英語",
       "👾 Python, 👾 Unity (C#), 👾 JavaScript, 👾 HTML/CSS, 👾 SQL, 👾 C/C++",
       "🛠️ ディープラーニング、🛠️ ウェブ開発、🛠️ データベース管理、🛠️ 分散コンピューティング、🛠️ データ分析"
     ],
-    "awards-h2": "出版、受賞、認定",
+    "awards-h2": "受賞・資格等",
     "awards-list": [
       "🎯 IELTS（Academic）6.5 (L7.5 R7 W6 S6) <span class=\"date\">2025.06</span>",
       "🎯 日本語能力試験 N1 148点 <span class=\"date\">2024.07</span>",
