--- a/public/assets/translation/translation.json
+++ b/public/assets/translation/translation.json
@@ -42,6 +42,24 @@
       "Developed 2D & 3D games, covering scene construction, physics simulation, and UI design.",
       "Applied skills to Create demo games to showcase abilities, available at: <a href=\"https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump\">Demo1</a> and <a href=\"https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway\">Demo2</a>."
     ],
+    "project5-title": "Full-Stack Big Data Analytics Platform with Apache Spark",
+    "project5-desc": [
+      "Engineered end-to-end data pipelines using PySpark and Scala to perform large-scale batch analysis (Spark SQL) and real-time processing (Spark Streaming).",
+      "Applied advanced analytics using GraphFrames for network modeling and built a complete machine learning workflow with Spark MLlib for spam classification.",
+      "Managed the full data lifecycle, from ETL and cleansing over 12 GB of massive e-commerce logs to complex business intelligence queries and predictive model evaluation."
+    ],
+    "project6-title": "<a href=\"https://github.com/darkwilldie/FirstCrawler\">58Tongcheng Job-Posting Web Crawler</a>",
+    "project6-desc": [
+      "Developed a Java-based web crawler using Selenium WebDriver to automate the extraction of job-posting information from the 58.com recruitment portal.",
+      "Engineered a user-friendly Java Swing GUI for application control and implemented a multi-storage solution, saving scraped data to both CSV files and a MySQL database.",
+      "Integrated comprehensive user management features, including registration and login, with an admin-level interface for direct database querying and management."
+    ],
+    "project7-title": "<a href=\"https://github.com/darkwilldie/blog-app\">Full-Stack Blog Application</a>",
+    "project7-desc": [
+      "Developed a full-stack blog application using React, Node.js, Express, and PostgreSQL.",
+      "Implemented a complete RESTful API for CRUD (Create, Read, Update, Delete) operations on posts.",
+      "Engineered a responsive, user-friendly frontend with Bootstrap and included a dark mode feature."
+    ],
     "skills-h2": "Skills",
     "skills-list": [
       "🌍 Chinese (Native️), 🌍 Japanese, 🌍 English",
@@ -111,6 +129,24 @@
       "开发了2D和3D游戏，涵盖了场景构建、物理模拟和UI设计。",
       "应用技能创建了演示游戏以展示能力，可在以下地址查看：<a href=\"https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump\">Demo1</a> 和 <a href=\"https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway\">Demo2</a>."
     ],
+    "project5-title": "Apache Spark大数据分析平台（全栈）",
+    "project5-desc": [
+      "使用PySpark和Scala构建端到端数据管道，实现大规模批处理分析（Spark SQL）和实时处理（Spark Streaming）。",
+      "利用GraphFrames进行网络建模分析，并用Spark MLlib构建完整的垃圾信息分类机器学习流程。",
+      "管理全流程数据生命周期，从ETL和清洗12GB电商日志到复杂商业智能查询与预测模型评估。"
+    ],
+    "project6-title": "<a href=\"https://github.com/darkwilldie/FirstCrawler\">58同城招聘信息爬虫</a>",
+    "project6-desc": [
+      "使用Java和Selenium WebDriver开发爬虫，自动抓取58同城招聘信息。",
+      "设计易用的Java Swing图形界面，实现多存储方案，数据可保存为CSV文件和MySQL数据库。",
+      "集成完整的用户管理功能，包括注册、登录，并提供管理员数据库查询和管理界面。"
+    ],
+    "project7-title": "<a href=\"https://github.com/darkwilldie/blog-app\">全栈博客应用</a>",
+    "project7-desc": [
+      "使用React、Node.js、Express和PostgreSQL开发全栈博客应用。",
+      "实现完整的RESTful API，支持文章的增删改查（CRUD）操作。",
+      "前端采用Bootstrap响应式设计，支持暗黑模式，提升用户体验。"
+    ],
     "skills-h2": "技能",
     "skills-list": [
       "🌍 中文 (母语), 🌍 日语, 🌍 英语",
@@ -179,6 +215,24 @@
       "Unityエンジンの基礎とゲーム開発用のC#構文を習得しました。",
       "シーン構築、物理シミュレーション、UIデザインをカバーする2Dおよび3Dゲームを開発しました。",
       "スキルを応用して、能力を示すためのデモゲームを作成しました。デモは<a href=\"https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump\">Demo1</a> および <a href=\"https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway\">Demo2</a>でご覧いただけます。"
+    ],
+    "project5-title": "Apache Sparkによるフルスタック大規模データ分析プラットフォーム",
+    "project5-desc": [
+      "PySparkとScalaでエンドツーエンドのデータパイプラインを構築し、Spark SQLによる大規模バッチ分析とSpark Streamingによるリアルタイム処理を実現。",
+      "GraphFramesでネットワークモデリングを行い、Spark MLlibでスパム分類の機械学習ワークフローを構築。",
+      "ETLと12GB超のECログのクレンジングから、BIクエリや予測モデル評価までデータライフサイクル全体を管理。"
+    ],
+    "project6-title": "<a href=\"https://github.com/darkwilldie/FirstCrawler\">58同城求人情報Webクローラー</a>",
+    "project6-desc": [
+      "JavaとSelenium WebDriverで58.com求人ポータルから情報を自動抽出するWebクローラーを開発。",
+      "Java Swingによる使いやすいGUIを設計し、CSVファイルとMySQLデータベースへのマルチストレージ保存を実装。",
+      "登録・ログインなどのユーザー管理機能と、管理者向けのDB直接操作インターフェースを統合。"
+    ],
+    "project7-title": "<a href=\"https://github.com/darkwilldie/blog-app\">フルスタックブログアプリケーション</a>",
+    "project7-desc": [
+      "React、Node.js、Express、PostgreSQLでフルスタックブログアプリを開発。",
+      "記事のCRUD操作を可能にするRESTful APIを実装。",
+      "Bootstrapによるレスポンシブなフロントエンドとダークモード機能を搭載。"
     ],
     "skills-h2": "スキル",
     "skills-list": [
