Added unrelated fields in summary

--- a/public/assets/translation/translation.json
+++ b/public/assets/translation/translation.json
@@ -10,7 +10,7 @@
     "name": "I'm Qianrui Liu",
     "occup": "a programmer",
     "summary-title": "Summary",
-    "summary-content": "👋 I'm a 4th-year university student majoring in <span class=\"bold-text\">Data Science</span>. I have some experience in <span class=\"bold-text\">Deep Learning</span>, <span class=\"bold-text\">Web Development</span>, <span class=\"bold-text\">Data Analysis</span>, and related fields🚀, but I am still learning and growing. Any advice or guidance is greatly appreciated!😊",
+    "summary-content": "👋 I'm a 4th-year university student majoring in <span class=\"bold-text\">Data Science</span>. I have some experience in <span class=\"bold-text\">Deep Learning</span>, <span class=\"bold-text\">Web Development</span>, <span class=\"bold-text\">Data Analysis</span>, and related or unrelated fields🚀, but I am still learning and growing. Any advice or guidance is greatly appreciated!😊",
     "edu-h2": "Education",
     "edu-p": "Senior at Wuhan Textile University <span id=\"edu-gpa\" class=\"has-dark\">GPA: 89.5/100 (Top 5% in major)</span>",
     "edu-year": "2022-2026",
